# src/XtremeIdiots.Portal.Repository.Api.V1/Controllers/V1/AdminActionsController.cs
@@ -164,6 +164,14 @@ namespace XtremeIdiots.Portal.RepositoryWebApi.Controllers.V1
                 {
                     AdminActionFilter.ActiveBans => query.Where(a => a.Type == (int)AdminActionType.Ban || a.Type == (int)AdminActionType.TempBan && (a.Expires == null || a.Expires > DateTime.UtcNow)),
                     AdminActionFilter.UnclaimedBans => query.Where(a => a.Type == (int)AdminActionType.Ban && a.UserProfile == null),
+                    AdminActionFilter.Observations => query.Where(a => a.Type == (int)AdminActionType.Observation),
+                    AdminActionFilter.Warnings => query.Where(a => a.Type == (int)AdminActionType.Warning),
+                    AdminActionFilter.Kicks => query.Where(a => a.Type == (int)AdminActionType.Kick),
+                    AdminActionFilter.TempBans => query.Where(a => a.Type == (int)AdminActionType.TempBan),
+                    AdminActionFilter.PermanentBans => query.Where(a => a.Type == (int)AdminActionType.Ban),
+                    AdminActionFilter.AllBans => query.Where(a => a.Type == (int)AdminActionType.Ban || a.Type == (int)AdminActionType.TempBan),
+                    AdminActionFilter.Disciplinary => query.Where(a => a.Type == (int)AdminActionType.Warning || a.Type == (int)AdminActionType.Kick || a.Type == (int)AdminActionType.Ban || a.Type == (int)AdminActionType.TempBan),
+                    AdminActionFilter.NonBan => query.Where(a => a.Type == (int)AdminActionType.Observation || a.Type == (int)AdminActionType.Warning || a.Type == (int)AdminActionType.Kick),
                     _ => query
                 };
             }
